Added editing of user team in tournament
