# pkg/api/tournament.go
@@ -354,10 +354,10 @@ func (api Api) getTournamentRoster(ctx *gin.Context) {
 }
 
 // createTournamentTeam godoc
-// @Summary Создание команды в турнире
+// @Summary Создание команды пользователя в турнире
 // @Security ApiKeyAuth
 // @Schemes
-// @Description Создание команды в турнире
+// @Description Создание команды пользователя в турнире
 // @Tags tournament
 // @Accept json
 // @Produce json
@@ -428,7 +428,7 @@ func (api Api) createTournamentTeam(ctx *gin.Context) {
 // @Produce json
 // @Param tournamentID query int true "tournamentID"
 // @Success 200 {array} players.UserTeamResponse
-// @Failure 401 {object} Error
+// @Failure 400,401 {object} Error
 // @Failure 500 {object} Error
 // @Router /tournament/team [GET]
 func (api Api) getTournamentTeam(ctx *gin.Context) {
@@ -454,11 +454,80 @@ func (api Api) getTournamentTeam(ctx *gin.Context) {
 
 	res, err := api.services.Teams.GetTournamentTeam(userID, tournamentID)
 	if err != nil {
-		log.Println("GetTournamentTeam:", err)
-		ctx.JSON(http.StatusInternalServerError, getInternalServerError())
-		return
+		switch err {
+		case storage.IncorrectTournamentID:
+			ctx.JSON(http.StatusBadRequest, getBadRequestError(err))
+			return
+		default:
+			ctx.JSON(http.StatusInternalServerError, getInternalServerError())
+			return
+		}
 
 	}
 
 	ctx.JSON(http.StatusOK, res)
+}
+
+// editTournamentTeam godoc
+// @Summary Редактирование команды пользователя в турнире
+// @Security ApiKeyAuth
+// @Schemes
+// @Description Редактирование команды пользователя в турнире
+// @Tags tournament
+// @Accept json
+// @Produce json
+// @Param tournamentID query int true "tournamentID"
+// @Param team body []int true "Список идентификаторов команд"
+// @Success 200 {object} StatusResponse
+// @Failure 400,401 {object} Error
+// @Failure 500 {object} Error
+// @Router /tournament/team/edit [PUT]
+func (api Api) editTournamentTeam(ctx *gin.Context) {
+	var inp tournaments.TournamentTeamModel
+
+	userID, err := parseUserIDFromContext(ctx)
+	if err != nil {
+		log.Println("EditTournamentTeam:", err)
+		return
+	}
+	inp.ProfileID = userID
+
+	query := ctx.Request.URL.Query()
+	if query.Has("tournamentID") {
+		id := query.Get("tournamentID")
+		inp.TournamentID, err = strconv.Atoi(id)
+		if err != nil {
+			ctx.JSON(http.StatusBadRequest, getBadRequestError(InvalidInputParametersError))
+			return
+		}
+	} else {
+		ctx.JSON(http.StatusBadRequest, getBadRequestError(InvalidInputParametersError))
+		return
+	}
+
+	if err = ctx.BindJSON(&inp.UserTeam); err != nil {
+		ctx.JSON(http.StatusBadRequest, getBadRequestError(InvalidInputBodyError))
+		return
+	}
+
+	err = api.services.Teams.EditTournamentTeam(inp)
+	if err != nil {
+		log.Println("EditTournamentTeam:", err)
+		switch err {
+		case storage.IncorrectTournamentID,
+			service.TeamExpensiveError,
+			service.InvalidTournamentTeam,
+			service.InvalidTeamPositions,
+			service.JoinTimeExpiredError,
+			service.InvalidPlayersNumber,
+			service.TeamNotCreatedError:
+			ctx.JSON(http.StatusBadRequest, getBadRequestError(err))
+			return
+		default:
+			ctx.JSON(http.StatusInternalServerError, getInternalServerError())
+			return
+		}
+	}
+
+	ctx.JSON(http.StatusOK, StatusResponse{"ок"})
 }
